# partitionless

./: CMakeLists.txt  DEPENDENCIES.md  Dockerfile  LICENSE  NOTICE  README.md
.devcontainer/: devcontainer.json
api/: CMakeLists.txt  partitionless.proto
include/: CMakeLists.txt  partitionless.in
include/partitionless/: authorization.hpp  authorization_token.hpp  partitionless.hpp  partitionless_error.hpp  platform.hpp
rpc/: CMakeLists.txt  partitionless.proto
src/cli/: CMakeLists.txt  main.cpp
src/daemon/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/lib/: CMakeLists.txt  client.cpp  client.hpp  partitionless.cpp
src/lib/tests/: CMakeLists.txt  ut_partitionless.cpp
