set(TARGET partitionless-dev)

file(GLOB INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/partitionless/*")

set(INCLUDES_RELATIVE "")
foreach(INCLUDE ${INCLUDES})
    file(RELATIVE_PATH RELATIVE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR} ${INCLUDE})
    set(INCLUDES_RELATIVE "${INCLUDES_RELATIVE}#include <${RELATIVE_INCLUDE}>\n")
endforeach()
set(MAIN_INCLUDE ${CMAKE_CURRENT_BINARY_DIR}/partitionless.hpp)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/partitionless.in ${MAIN_INCLUDE} @ONLY)
list(APPEND SOURCES ${CMAKE_CURRENT_BINARY_DIR}/partitionless.hpp)

add_library(${TARGET} INTERFACE)
target_include_directories(${TARGET} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
install(FILES ${MAIN_INCLUDE} TYPE INCLUDE)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/partitionless TYPE INCLUDE)
