set(TARGET partitionless)
set(TARGET_SHORTNAME pl)

add_executable(${TARGET} main.cpp)
add_custom_command(
    TARGET ${TARGET} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E create_symlink ./${TARGET} ${TARGET_SHORTNAME}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

install(TARGETS ${TARGET} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_SHORTNAME} TYPE BIN)
